--- a/package.json
+++ b/package.json
@@ -1,1 +1,13 @@
-
+{
+  "name": "simple-web-project",
+  "version": "1.0.0",
+  "description": "A simple web project with HTML, CSS, and JavaScript",
+  "scripts": {
+    "start": "live-server --port=8080"  // تشغيل live-server على المنفذ 8080
+  },
+  "author": "Your Name",
+  "license": "ISC",
+  "devDependencies": {
+    "live-server": "^1.2.1"  // يمكنك تعديل الإصدار حسب الحاجة
+  }
+}
